java-microservice-app-in-eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: java-microservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: java-microservice
    spec:
      containers:
      - name: java-microservice-container
        image: 943330243877.dkr.ecr.us-east-1.amazonaws.com/java-web-app:v1
        ports:
        - containerPort: 4567
