java-microservice-app-in-eks/oxyz.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  namespace: ns-2
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - pod-2-label # Label used by pods in ns-2 (corrected from ns-1)
        topologyKey: kubernetes.io/hostname
  containers:
  - name: nginx
    image: nginx

this is pod 1: 

apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    app: pod-1-label
  namespace: ns-1
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - pod-1-label # Label used by pods in ns-1
        topologyKey: kubernetes.io/hostname
  containers:
  - name: nginx
    image: nginx
why are both getting scheduled on same node can you please correct it
